--- a/sass/phone.scss
+++ b/sass/phone.scss
@@ -1,4 +1,8 @@
-$prime-color: red;
+$primary-color:#9356DC;
+$secondary-color: #FF79DA;
+$third-color: #99E2D0;
+$main-font: Shrikhand;
+$text-font: Roboto;
 
 h1{
     color: $prime-color;
